2017-07-26         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (set_namespace): Change return type void, adjust
	all return statements.
	[@namespace]: Don't YYABORT on bad namespace so that we can check
	the rest of the program.
	(validate_qualified_name): Check traditional / posix first. Return
	after printing an error message; we don't want to print multiple
	messages for the same identifer.
	* interpret.h (r_interpret): For indirect call, set do_qualify
	parameter of lookup based on presence of a colon.

2017-07-20         Arnold D. Robbins     <arnold@skeeve.com>

	Make qualified names work with -v and command-line assignments.

	* awk.h (validate_qualified_name, check_qualified_name): Declare.
	* awkgram.y (validate_qualified_name): No longer static.
	(check_qualified_name): Ditto.
	* main.c (arg_assign): Allow colons in identifiers. If not a
	bad identifier, call validate_qualified_name and instead of
	check_special use check_qualified_name.

2017-07-17         Arnold D. Robbins     <arnold@skeeve.com>

	Allow identifiers that are gawk extensions to be used as plain
	identifiers outside the "awk" namespace. Make the real
	builtins available via awk::builtin_name(). Standard awk reserved
	words and builtin functions remain reserved.

	* awk.h (getfname): Add boolean parameter to prepend namespace
	or not.
	* awkgram.y (check_qualified_name): New function. Enforces that
	standard awk reserved words and functions aren't allowed, and
	allows awk::gawk_extension from non-"awk" namespace.
	[direct_func_call]: Always convert name to fully qualified.
	(getfname): Add boolean parameter to prepend namespace
	or not. Adjust code.
	(yylex): Separate out validation code from code building the
	NAME token.  Use check_qualified_name to decide if token is
	special instead of check_special.
	(validate_qualified_name): Just checks the form of the fully
	qualified name.
	* debug.c (print_instruction): Update call to getfname.