@@ -1,5 +1,11 @@
 2017-07-26         Arnold D. Robbins     <arnold@skeeve.com>
 
+	* Makefile.am (nsbad_cmd, nsindirect1, nsindirect2): New tests.
+	* nsbad_cmd.ok, nsindirect1.awk, nsindirect1.ok, nsindirect2.awk,
+	nsindirect2.ok: New files.
+
+2017-07-26         Arnold D. Robbins     <arnold@skeeve.com>
+
 	* Makefile.am (nsbad): New test.
 	* nsbad.awk, nsbad.ok: New files.
 
